quedamos en sentencias

--- a/modulo3.ipynb
+++ b/modulo3.ipynb
@@ -221,17 +221,27 @@
     "## **BUCLES**\n",
     "Un Bucle es basicamente la ejecucion indefinida de un código hasta que se cumpla una condicion, el código itera sobre valores y hasta no encontrar alque que cumple con la condicion que buscamos no deja de ejecutarse una y otra vez.\n",
     "\n",
+    "**BUCLE WHILE**\n",
+    "\n",
     "En python, un bucle se puede representar de la siguiente manera:\n",
+    "\n",
     "``while``\n",
+    "\n",
     "       ``instruction``\n",
+    "       \n",
     "La sintaxis que utiliza un bucle es muy similar a la de ``if``, pero en semantica hay una gran diferencia, ``if`` realiza una accion **una única vez** cuando se cumple la condicion, mientras que ``while`` repite la ejecucion siempre y cuando la condicion se evalue como verdadera.\n",
     "Los bucles ``while`` se ven algo así:\n",
     "\n",
     "``while onditional_expression:``\n",
+    "\n",
     "        ``ìnstruction1``\n",
+    "\n",
     "        ``instruction2``\n",
+    "\n",
     "        :\n",
+    "\n",
     "        :\n",
+    "\n",
     "        ``instructionn``\n",
     "\n",
     "Todas las instrucciones ejecutadas dentro del bucle (que contienen sangria) se denominan \"cuerpo del bucle\". Si la condicion que se especifica al principio es falsa, no se ejecuta ninguna instruccion del cuerpo del bucle, y algo muy importante es que dentro del cuerpo del bucle debe haber alguna accion que **cambie el valor de la condicion**, si ésto no ocurre el bucle podría ejecutarse hasta el infinito.\n",
@@ -293,6 +303,103 @@
     "El bucle de arriba primero verifica que se cumpla con la condicion que ``number != 0``, si se cumple se ingresa al bucle, sino se sale y se siguen ejecutando las lineas siguientes.\n",
     "Una vez dentro del bucle planteamos condicionales, como queremos diferenciar entre números pares e impares usamos ``if`` y ``else``, y se ejecuta la ultima linea donde le pide ingresar un número de nuevo, ésta última linea se va a ejecutar cada vez que se ingrese un número distinto a 0, porque ya estamos dentro del bucle y la única forma de salir es ingresando 0, es decir la forma de \"salir del bucle\" se plantea desde el principio, y para cambiar la condicion de True a Flase se utiliza la última linea de código.\n",
     "Una vez fuera del bucle simplemente se ejecutan las lineas siguientes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**BUCLE FOR**\n",
+    "\n",
+    "Otra forma de crear un bucle es utilizando el **bucle for**, este puede explorar grandes colecciones de datos elemento por elemento (iterando), pero empecemos de forma sencilla.\n",
+    "Un bucle for va a tener ésta pinta:\n",
+    "\n",
+    "``for i in range(100)``\n",
+    "\n",
+    "        ``do_something()``\n",
+    "\n",
+    "        ``pass``\n",
+    "\n",
+    "Veamos las diferencia con el bucle while:\n",
+    "- No hay condicion: ``for`` abre el bucle pero no se establece ninguna condicion para cerrarlo como en while.\n",
+    "- Cualquier palabra despues de ``for`` es una **variable de control**, es muy comun nombrar a esta variable como ``i``.\n",
+    "- Luego de la variable de control se introduce el rango de valores que puede tomar la variable de control, y se utiliza la palabra clave reservada ``in``.\n",
+    "- se establace el rango de valores que va a tomar la variable controlada: es muy comun utilizar la funcion integrada **range()**, que crea una lista de valores de un rango establecido, por ejmplo ``range(10)`` crea una lista desde el 0 al 9. Mas adelante vermos que se pueden utilizar listas o tuplas para iterar.\n",
+    "\n",
+    "Una vez que tengamos todos estos elementos podemos ingresar al bucle, alli le especificamos que instruccion seguir y el bucle ejecutara esta tomando todos los valores posibles para ``i``, veamoslo con un ejemplo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor de i es 0\n",
+      "El valor de i es 1\n",
+      "El valor de i es 2\n",
+      "El valor de i es 3\n",
+      "El valor de i es 4\n",
+      "El valor de i es 5\n",
+      "El valor de i es 6\n",
+      "El valor de i es 7\n",
+      "El valor de i es 8\n",
+      "El valor de i es 9\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(\"El valor de i es\", i)\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La instruccion, que es que se imprima el valor de i, se ejecuta 10 veces, porque ese es el numero de veces que ``i`` toma un valor distinto, en este caso en un rango del 0 al 9. El valor final de ``i`` será el ultimo que tomo (9). Recordemos que la funcion *range()* puede recibir mas de un argumento indicandole desde que numero tomar hasta cual, por ej. **range(2, 8)** toma desde el 2 inclusive hasta el 7 inclusive, es decir el segundo numero marca el limite.\n",
+    "Tambien se le puede indicar que vaya de 2 en 2, de 3 en 3, y así sucesivamente agregando un 3er argumento, por ej. **range(2, 8, 3)** toma desde el 2 hasta el 8 y va de 3 en tres, por lo tanto los valores dentro de esta funcion pueden ser 2 y 5 (**2**, 3, 4, **5**, 6, 7).\n",
+    "Notar que la funcion range() siempre va en **orden ascendente**, por lo que no podemos darle los argumento (8, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Mississippi\n",
+      "2 Mississippi\n",
+      "3 Mississippi\n",
+      "4 Mississippi\n",
+      "5 Mississippi\n",
+      "Listos o no aqui voy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "for i in range(5):\n",
+    "    print(f\"{i+1} Mississippi\")\n",
+    "    time.sleep(1)\n",
+    "print(\"Listos o no aqui voy!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**SENTENCIAS ``break`` Y ``continue``**\n",
+    "\n"
    ]
   }
  ],
