--- a/modulo3.ipynb
+++ b/modulo3.ipynb
@@ -399,7 +399,232 @@
    "metadata": {},
    "source": [
     "**SENTENCIAS ``break`` Y ``continue``**\n",
+    "En ocasiones es necesario salir del bucle, incluso si se cumple la condicion, y otras veces, al contrario, debemos seguir ejecutandolo aunque no se cumpla la condicion, para ésto podemos usar las sentencias ``break`` y ``continue`` respectivamente.\n",
+    "``Break`` sale inmediatamente del bucle, finaliza la accion del mismo y el programa sigue ejecutando otras instrucciones.\n",
+    "``Continue`` se comporta como si el programa hubiera llegado repentinamente al final del cuerpo, iniciando el siguiente turno, es decir se usa para omitir el valor actual y avanzar a la siguiente iteracion.\n",
+    "\n",
+    "Ambas son palabras reservadas, y para ejecutarse deben recibir un **condicional**, es decir le debemos decir al programa \"si ésto se cumple, sali del bucle (``break``), o segui ejecutando (``continue``)\" veamos un ejemplo para entender mejor.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La instrucción break:\n",
+      "Dentro del bucle. 1\n",
+      "Dentro del bucle. 2\n",
+      "Fuera del bucle.\n",
+      "\n",
+      "La instrucción continue:\n",
+      "Dentro del bucle. 1\n",
+      "Dentro del bucle. 2\n",
+      "Dentro del bucle. 4\n",
+      "Dentro del bucle. 5\n",
+      "Fuera del bucle.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"La instrucción break:\")\n",
+    "for i in range(1, 6):\n",
+    "    if i == 3:\n",
+    "        break\n",
+    "    print(\"Dentro del bucle.\", i)\n",
+    "print(\"Fuera del bucle.\")\n",
+    "\n",
+    "\n",
+    "# continue - ejemplo\n",
+    "\n",
+    "print(\"\\nLa instrucción continue:\")\n",
+    "for i in range(1, 6):\n",
+    "    if i == 3:\n",
+    "        continue\n",
+    "    print(\"Dentro del bucle.\", i)\n",
+    "print(\"Fuera del bucle.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vemos como en el primer bucle, cuando la variable controlada se vuelve 3, el bucle se rompe, mientras que en el segundo, cuando la variable controlada se vuelve 3 continuamos.\n",
+    "Esto puede ser útil para cuando querramos iterar en una base de datos y queremos saltearnos algunos valores, en ese caso usamos ``continue``, o si queremos iterar hasta un valor determinado y salir, usamos ``break``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el doble de los primeros 5 numeros es: 2\n",
+      "el doble de los primeros 5 numeros es: 4\n",
+      "el doble de los primeros 5 numeros es: 6\n",
+      "el doble de los primeros 5 numeros es: 8\n",
+      "el doble de los primeros 5 numeros es: 10\n",
+      "el doble de los numeros NO primos es: 2\n",
+      "el doble de los numeros NO primos es: 4\n",
+      "el doble de los numeros NO primos es: 6\n",
+      "el doble de los numeros NO primos es: 8\n",
+      "el doble de los numeros NO primos es: 10\n",
+      "el doble de los numeros NO primos es: 12\n",
+      "el doble de los numeros NO primos es: 16\n",
+      "el doble de los numeros NO primos es: 18\n",
+      "el doble de los numeros NO primos es: 20\n",
+      "el doble de los numeros NO primos es: 22\n",
+      "el doble de los numeros NO primos es: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+    "\n",
+    "for i in list:\n",
+    "    if i == 6:\n",
+    "        break\n",
+    "    print(f\"el doble de los primeros 5 numeros es: {i*2}\")\n",
+    "\n",
+    "for i in list:\n",
+    "    if i ==7:\n",
+    "        continue\n",
+    "    print(f\"el doble de los numeros NO primos es: {2*i}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Es importante aclarar que estas dos sentencias se pueden utilizar en cualquier tipo de bucle, es bastante utilizado en bucles ``for`` pero tranquilamente lo podemos utilizar en un bucle ``while``:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "has dejado el bucle con exito\n"
+     ]
+    }
+   ],
+   "source": [
+    "palabra = input(\"\"\"ingrese cualquier palabra o \"chupacabra\" para salir\"\"\")\n",
+    "\n",
+    "while palabra != \"chupacabra\":\n",
+    "    palabra = input(\"\"\"ingrese cualquier palabra o \"chupacabra\" para salir\"\"\")\n",
+    "    if palabra == \"chupacabra\":\n",
+    "        print(\"has dejado el bucle con exito\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**BUCLES Y RAMA ``ELSE``**\n",
+    "Ambos bucles pueden hacer uso de la rama ``else``, recordemos que la utilizabamos para condicionales, pero tambien se puede aplicar a bucles de una forma muy similar a los condicionales, recordemos que ``else`` debia esta predecedido siempre por un condicional, es decir no lo podíamos usar solo, de forma que si lo utilizamos con un bucle este funcional como un condicional.\n",
+    "La rama ``else`` siempre se ejecuta una vez independientemente de si el bucle ha entrado o no a su cuerpo.\n",
+    "Vemos un ejemplo para cada cas:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "else: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while i < 5:\n",
+    "    print(i)\n",
+    "    i += 1\n",
+    "else:\n",
+    "    print(\"else:\", i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "else: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print(\"else:\", i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En el primer bucle donde se utiliza ``while`` se plantea la condicion de que **i < 5**, si esto se cumple se ingresa al bucle y dentro de éste recibe dos instrucciones, una es imprimir el valor de i, y otra esaumentar el valor de i en una unidad (``i += 1``), una vez que i alcanza una valor mayor a 5, el programa sale del bucle y se ejecuta la rama ``else``.\n",
+    "En el segundo bucle le damos a la variable de control una rango de 5 (de 0 a 4), la instruccion de imprimir cada valor del rango, y cuando termina de iterar se ejecuta la rama ``else``.\n",
+    "\n",
+    "<span style=\"color: red;\"> notar que en los bucles ``while`` se debe definir la variable que se va a utilizar antes de crear el bucle, mientras que los bucles ``for`` crean la variable ellos mismos</span> es más, si en un bucle ``for`` se asigna el valor de la variable antes de crear el bucle éste no se va a ejecutar. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La altura de la pirámide es: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "blocks = int(input(\"Ingrese el número total de bloques: \"))\n",
+    "\n",
+    "altura = 0  # Altura de la pirámide\n",
+    "capa = 1    # Número de bloques requeridos para la siguiente capa\n",
+    "\n",
+    "while blocks >= capa:  # Mientras haya suficientes bloques para la capa actual\n",
+    "    blocks -= capa     # Resta los bloques usados por la capa actual\n",
+    "    altura += 1        # Incrementa la altura de la pirámide\n",
+    "    capa += 1          # Aumenta el número de bloques requeridos para la siguiente capa\n",
+    "\n",
+    "print(f\"La altura de la pirámide es: {altura}\")"
    ]
   }
  ],
